# Duchess

./: .gitignore  AGENTS.md  CLAUDE.md  HACKATHON_STRATEGY.md  LICENSE  QUICKSTART.md  README.md
.claude/: settings.json
.claude/agents/: alex.md  carlos.md  duke.md  elena.md  jordan.md  kai.md  luis.md  maya.md  mei.md  noah.md  priya.md  raj.md  sam.md  taylor.md  wei.md
.claude/commands/: skill.md  spec.md
.claude/skills/: android-development.md  ar-interface-design.md  bilingual-localization.md  camera-streaming.md  cloud-infrastructure.md  computer-vision.md  construction-safety.md  debugging.md  devops-cicd.md  edge-inference.md  getting-started.md  grant-writing.md  ml-model-training.md  mockdevice-testing.md  model-quantization.md  permissions-registration.md  ppe-detection-pipeline.md  sample-app-guide.md  session-lifecycle.md  tailscale-networking.md  testing-qa.md  video-processing.md
.githooks/: commit-msg  post-commit  post-merge  pre-commit
.github/agents/: alex.agent.md  carlos.agent.md  duke.agent.md  elena.agent.md  jordan.agent.md  kai.agent.md  luis.agent.md  maya.agent.md  mei.agent.md  noah.agent.md  priya.agent.md  raj.agent.md  sam.agent.md  taylor.agent.md  wei.agent.md
.github/instructions/: android-companion.instructions.md  android-vuzix.instructions.md  cloud-services.instructions.md  data-privacy.instructions.md  mesh-network.instructions.md  ml-pipeline.instructions.md  ppe-detection-workflow.instructions.md  project-architecture.instructions.md  safety-alert-system.instructions.md
.github/skills/android-development/: SKILL.md
.github/skills/ar-interface-design/: SKILL.md
.github/workflows/: ci.yml  pages.yml
.memory/: README.md  claude-queue.md  decisions.md  hackathon-pivot-plan.md  handoff.md  project-state.md
app-glasses/: settings.gradle.kts
app-glasses/app/: build.gradle.kts  proguard-rules.pro
app-glasses/gradle/: libs.versions.toml
app-phone/: DEMO_SETUP.md  local.properties.example  settings.gradle.kts
app-phone/app/: build.gradle.kts  proguard-rules.pro
app-phone/gradle/: libs.versions.toml
cloud/: README.md  app.py  pyproject.toml
cloud/lambda/ppe_escalation/: handler.py  requirements.txt
cloud/stacks/: duchess_stack.py
cloud/tests/: __init__.py  conftest.py  test_duchess_stack.py  test_handler.py  test_integration.py
docs/: CODEBASE_CHEAT_SHEET.md  GEMMA4_TECHNICAL_REVIEW.md  Gemfile  HACKATHON_MASTER_STRATEGY.md  M400_PRODUCT_NARRATIVE.md  VUZIX_OUTREACH_EMAIL.md  _config.yml  gemma4_business_page.html  index.html  index.md
docs/hackathon/: index.md  overview.md  timeline.md
docs/project/: index.md  sprint-board.md  team.md
docs/technical/: architecture.md  gemma4.md  index.md  meta-google-stack.md  unsloth.md
ml/: .env.example  README.md  pyproject.toml
ml/adapters/safety/: config.json
ml/adapters/spanish_jargon/: config.json
ml/eval/: benchmark.py
ml/scripts/: export_model.py  prepare_dataset.py  train_gemma3n.py  train_gemma4.py
ml/tests/: __init__.py  conftest.py  test_benchmark.py  test_export_model.py  test_prepare_dataset.py  test_train_gemma3n.py  test_train_gemma4.py
scripts/: build-glasses.sh  build-phone.sh  download-ppe-model.py  install.sh  mirror-skills.sh  setup-dev.sh
specs/: _template.spec.md  alerts.spec.md  ppe-detection.spec.md  ppe.spec.md  stream.spec.md
(+109 files in other folders)
